[project]
name = "end-to-end-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "beautifulsoup4",
    "faiss-cpu",
    "groq",
    "langchain==0.3.25",
    "langchain-community==0.3.24",
    "langchain-huggingface==0.1.2",
    "langgraph==0.2.76",
    "pydantic<2.11",
    "pypdf",
    "python-dotenv",
    "requests",
    "sentence-transformers==2.7.0",
    "transformers==4.41.2",
    "torch==2.2.2",
    "numpy<2",
    "streamlit",
    "wikipedia",
    "langchain-groq>=0.3.8",
]
